# microirc

./: COPYING.txt  IRC.sln
IRC/: Freenode.ini  IRC.vcproj  buffer.h  client.h  dialogs.h  dialogs_functions.h  functions.h  gui_functions.h  iniparser.h  irc.cpp  irc.h  ircconfig.h  ircprotocol.h  list.h  manager.h  menu.aps  menu.rc  menu.rc2  network.h  options.ini  readme.txt  resource.h  richedit.h  richinkstyle.h  tab_manager.h
buffer/: buffer.cpp  buffer.h  buffer.vcproj
iniparser/: iniparser.cpp  (+2 more)
reactOS/calc/: CMakeLists.txt  CMakeLists2.txt  about2.c  buffer.c  calc.h  calc2.h  convert2.c  fun_mpfr2.c  function2.c  iniparser.c  ircprotocol.c  ircprotocol.h  list.c  network.c  resource.rc  resource2.h  resource2.rc  rpn2.c  rpn_mpfr2.c  util.h  utl2.c  utl_mpfr2.c  winmain.c  winmain2.c
reactOS/calc/IRC/: Freenode.ini  checkbox_manager.c  checkbox_manager.h  client.h  client_proc.h  dialogs_functions.h  function.c  functions.h  gui_functions.h  irc.c  irc.h  ircconfig.h  manager.h  manager_proc.h  menu.rc  proc_functions.h  resource.h  resource.rc  tab_manager.h  tab_manager_proc.h
reactOS/calc/IRC/lang/: en-US.rc
reactOS/calc/buffer/: buffer.c  buffer.h
reactOS/calc/iniparser/: iniparser.c
reactOS/calc/lang/: el-GR.rc  ko-KR.rc  th-TH.rc
reactOS/calc/list/: list.h
reactOS/calc/network/: network.c
reactOS/calc/res/: Thumbs.db
reactOS/calc/util/: util.c
reactOS/irc/: CMakeLists.txt  client.h  client_proc.h  functions.h  irc.c  irc.h  ircconfig.h  manager.h  manager_proc.h  proc_functions.h  readme.txt  resource.h  resource.rc  tab_manager_proc.h
reactOS/irc/ircprotocol/: ircprotocol.c
reactOS/irc/lang/: en-US.rc  pt-PT.rc
reactOS/irc/list/: list.c
(+147 files in other folders)
